# infradex

./: .env.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODEOWNERS  README.md  docker-compose.monitoring.yml  docker-compose.yml  poe_tasks.toml  pyproject.toml  release-please-config.json
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: auto-pr-dev-to-main.yml  auto-pr-to-dev.yml  ci.yml  claude.yml  docs-notify.yml  enforce-dev-to-main.yml  release-please.yml  security.yml
ansible/inventory/: hosts.example.yml
ansible/playbooks/: bootstrap-vps.yml  install-k3s.yml  setup-monitoring.yml
argocd/: application.yaml  argocd-ingress.yaml
argocd/base/: deployment.yaml  kustomization.yaml  networkpolicy.yaml  service.yaml
argocd/base-careerdex/: deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
argocd/base-dex-studio/: deployment.yaml  ingress.yaml  service.yaml
argocd/system/: cert-manager.yaml  cluster-issuer.yaml  external-dns.yaml
docs/: CLOUD_MIGRATION.md  DEPLOY_RUNBOOK.md  DISASTER_RECOVERY.md  LOCAL_K8S_SETUP.md  VPS_SETUP.md  cloud-migration.md  deploy-runbook.md  local-k8s-setup.md  vps-setup.md
helm/values/: values-cloud.yaml  values-vps.yaml
localstack/: create-buckets.sh
monitoring/: alertmanager.yml  prometheus.yml
monitoring/alerts/: dataenginex-alerts.yml  drift_alerts.yml
monitoring/grafana/: GUIDE.md
scripts/: backup-databases.sh  one-click-deploy.sh  rotate-secrets.sh  setup-system.sh
src/infradex/: __init__.py  (+1 more)
tasks/: findings.md  lessons.md  todo.md
tests/: conftest.py
(+57 files in other folders)
